# pasc

./: .gitignore  Makefile  README.md  go.mod  go.sum
cmd/pasc/: pasc.go
cmd/pasc/cli/: build.go  cli.go
examples/: array.pas  assign.pas  case.pas  for-stmt.pas  gcd.pas  goto.pas  helloworld.pas  ifstmt.pas  max.pas  record.pas  repeat.pas  sqrt.pas  while.pas
pkg/: program.proto
pkg/ast/: AssignStatement.go  Ast.go  BinaryExpression.go  Block.go  BoolExpr.go  BoolLiteral.go  CaseStatement.go  CharString.go  CompoundStatement.go  ConstDefinition.go  FieldDesignator.go  ForStatement.go  FuncDeclaration.go  FuncDesignator.go  GoToStatement.go  IdentifiedVariable.go  Identifier.go  IfStatement.go  IndexedVariable.go  IntegerLiteral.go  LabelDefinition.go  NilValue.go  Parameter.go  ProcedureDeclaration.go  ProcedureStatement.go  ProcedureStmt.go  Program.go  Range.go  Read.go  ReadLn.go  RepeatStatement.go  ReturnStatement.go  SetConstructor.go  StrLiteral.go  StringLiteral.go  Type.go  TypeDefinition.go  UIntegerLiteral.go  URealLiteral.go  UnaryExpression.go  (+8 more)
pkg/codegen/: Add.bril  CMakeLists.txt  CodeGenerator.go  CodeGenerator_test.go  HelloWorld.bril  LLVMIRCodeGenerator.go  LLVMIRCodeGenerator_test.go  SymbolTable.go  main.cc
pkg/codegen/backend/: .clang-format  CMakeLists.txt  main.cc
pkg/codegen/backend/include/: Block.h  Deserializer.h  Expr.h  IRCodeGenVisitor.h  IRVisitor.h  Statement.h  SymbolTable.h  Type.h  program.pb.cc  program.pb.h
pkg/codegen/backend/include/deserialize/: Block.h  Callable.h  Declaration.h  Expr.h  IRVisitor.h  Program.h  Statement.h  Type.h
pkg/codegen/backend/include/llvm_ir/: IRCodeGenVisitor.h  SymbolTable.h
pkg/codegen/backend/include/proto/: expression.pb.cc  expression.pb.h  program.pb.cc  program.pb.h  statement.pb.cc  statement.pb.h  token.pb.cc  token.pb.h  type.pb.cc  type.pb.h
pkg/codegen/backend/src/: Block.cc  CMakeLists.txt  Declaration.cc  Deserializer.cc  Expr.cc  ExprCodeGen.cc  IRCodeGenVisitor.cc  Program.cc  Statement.cc  StatementCodeGen.cc  SymbolTable.cc  Type.cc
pkg/codegen/backend/src/deserialize/: Block.cc  CMakeLists.txt  Callable.cc  Declaration.cc  Deserializer.cc  Expr.cc  Program.cc  Statement.cc  Type.cc
pkg/codegen/backend/src/llvm_ir/: CMakeLists.txt  ExprCodeGen.cc  IRCodeGenVisitor.cc  StatementCodeGen.cc  SymbolTable.cc  TypeCodeGen.cc
pkg/codegen/deserialize/: Block.cc  Block.h  CMakeLists.txt  Declaration.cc  Declaration.h  Deserializer.cc  Deserializer.h  Expr.cc  Expr.h  IRCodeGenVisitor.cc  IRCodeGenVisitor.h  IRVisitor.h  Program.cc  Program.h  Statement.cc  Statement.h  Type.cc  program.pb.cc  program.pb.h
pkg/codegen/llvm_ir/: CMakeLists.txt  ExprCodegen.cc  IRCodeGenVisitor.h  IRVisitor.h  StatementCodegen.cc
pkg/codegen/serde/: ProtoSerializer.go  program.pb.go
pkg/codegen/serializer/: ProtoSerializer.go  expression.pb.go  program.pb.go  statement.pb.go  token.pb.go  type.pb.go
pkg/dtype/: Integer.go  Type.go
pkg/parser/: Lexer.go  Lexer_test.go  Parser.go  Parser_test.go  Token.go  Utils.go
pkg/proto/: expression.proto  program.proto  statement.proto  token.proto  type.proto
pkg/semantics/: Boolean.go  Char.go  Const.go  ExprTypeVisitor.go  Field.go  Function.go  Integer.go  LValueVisitor.go  Label.go  Procedure.go  Real.go  Scope.go  SemanticAnalyzer.go  SemanticAnalyzer_test.go  Semantics.go  SemanticsVisitor.go  StaticTypeChecker.go  Symbol.go  TypeDef.go  Utils.go  Variable.go
pkg/semantics_tests/: SemanticAnalyzer_test.go  SemanticsVisitor_test.go
pkg/sematics/: SemanticAnalyzer.go  SemanticAnalyzer_test.go
pkg/symbols/: Boolean.go  BuiltInType.go  Char.go  Const.go  Field.go  Function.go  Integer.go  Label.go  Real.go  Scope.go  Symbol.go  TypeDef.go  Variable.go
pkg/token/: File.go  Position.go  Token.go
pkg/types/: Array.go  Boolean.go  Char.go  Integer.go  Real.go  Set.go  Type.go
pkg/types/base/: Boolean.go  Char.go  Integer.go  Real.go  String.go
pkg/types/structured/: Array.go  Enumerated.go  File.go  Pointer.go  Record.go  Set.go  SubRange.go
scripts/: compile.sh
